--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/icon.css">
-  <link rel="stylesheet" href="/assets/css/index.css">
+  <link rel="stylesheet" href="assets/css/index.css">
   <link rel="stylesheet" href="assets/css/jalalidatepicker.min.css">
   <title>Hotel Project</title>
 </head>
@@ -16,9 +16,9 @@
     <!-- Navbar start -->
     <nav>
       <div class="col1">
-        <div class="logo">
-          <img src="/assets/img/main-logo.png" alt="">
-        </div>
+        <a href="#" class="logo">
+          <img src="assets/img/main-logo.png" alt="">
+        </a>
         <ul>
           <li><a href="#">رزو هتل</a></li>
           <li><a href="#">پیگیری رزو</a></li>
