slove a mistake and create services

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
       </div>
     </nav>
     <!-- Navbar end -->
-    <!-- Header-content start -->
-    <section class="header-content">
+  </header>
+
+  <main>
+    <!-- content start -->
+    <section class="content">
       <!-- Slider start -->
       <div class="slider">
         <span class="icon-ellipsis-vertical"></span>
@@ -76,8 +79,32 @@
       </div>
       <!-- Hotel-search end -->
     </section>
-    <!-- Header-content end -->
-  </header>
+    <!-- content end -->
+
+    <!-- Services start -->
+    <section class="services">
+      <div class="service-item off">
+        <span class="icon-location-pin sevice-icon"></span>
+        <span>ارائه تخفیفات مناسب</span>
+      </div>
+      <div class="service-item support">
+        <span class="icon-location-pin sevice-icon"></span>
+        <span>پشتیبانی از امور مشتریان</span>
+      </div>
+      <div class="service-item interducing">
+        <span class="icon-location-pin sevice-icon"></span>
+        <span>صفحه معرفی کامل هر هتل</span>
+      </div>
+      <div class="service-item weblog">
+        <span class="icon-location-pin sevice-icon"></span>
+        <span>وبلاگ جامع همکار هتل</span>
+      </div>
+    </section>
+    <!-- Services end -->
+  </main>
+
+
+
 </body>
 <!-- solar calender -->
 <script src="assets/js/jalalidatepicker.min.js"></script>
