index.html is updated

--- a/index.html
+++ b/index.html
@@ -171,9 +171,53 @@
       </div>
     </section>
     <!-- Hotel list end -->
+
+    <!-- Contact us start -->
+    <section class="contact-us">
+      <div class="phone-number">
+        <span class="icon-location-pin"></span>
+        <span>شماره تلـفن: 3489573 - 021</span>
+      </div>
+      <div class="contact-address">
+        <span class="icon-location-pin"></span>
+        <span>آدرس دفـتر مرکـزی: تهران، خیابان شریعتی، پلاک 3</span>
+      </div>
+    </section>
+    <!-- Contact us end -->
   </main>
 
-
+  <!-- footer start -->
+  <footer>
+    <div class="footer-container">
+      <div class="logo-container">
+        <div class="logo">
+          <img src="assets/img/footer-logo.png" alt="">
+        </div>
+      </div>
+      <div class="text">
+        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون
+          بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع
+          با هدف بهبود.</p>
+      </div>
+      <div class="credit-symbols">
+        <div class="e-namad">
+          <img src="assets/img/e-namad.png" alt="e-namad">
+        </div>
+        <div class="resane-digital">
+          <img src="assets/img/resane-digital.png" alt="resane digital">
+        </div>
+        <div class="cultural-heritage">
+          <img src="assets/img/cultural heritage-symbole.png" alt="cultural heritage symbol">
+        </div>
+      </div>
+      <div class="social-media">
+        <span class="icon-location-pin"></span>
+        <span class="icon-location-pin"></span>
+        <span class="icon-location-pin"></span>
+      </div>
+    </div>
+  </footer>
+  <!-- footer end -->
 
 </body>
 <!-- solar calender -->
