change grid and flex structure

--- a/index.html
+++ b/index.html
@@ -104,35 +104,40 @@
 
     <!-- City list start -->
     <section class="city-list">
-      <div class="city-list-title">
-        <span class="icon-location-pin city-title-icon"></span>
-        <span class="city-title-list">لیست شهر ها</span>
-        <span class="city-title-desciption">به همراه سقف تخفیفات در هر شهر</span>
+      <div class="city-title-menu">
+        <div class="city-title">
+          <span class="icon-location-pin city-title-icon"></span>
+          <span class="city-title-list">لیست شهر ها</span>
+          <span class="city-title-desciption">به همراه سقف تخفیفات در هر شهر</span>
+        </div>
+        <div class="city-see-more">
+          <span>مشاهده بیشتر شهرها</span><span>&#10095;</span>
+        </div>
       </div>
-      <div class="city-see-more">
-        <span>مشاهده بیشتر شهرها</span><span>&#10095;</span>
-      </div>
-      <div class="city-tehran city-item">
-        <span class="city-off">32%</span>
-        <img src="assets/img/Tehran.png" alt="Tehran">
-      </div>
-      <div class="city-shiraz city-item">
-        <span class="city-off">32%</span>
-        <img src="assets/img/Shiraz.png" alt="Shiraz">
-      </div>
-      <div class="city-esfahan city-item">
-        <span class="city-off">32%</span>
-        <img src="assets/img/Esfahan.png" alt="Esfahan">
-      </div>
-      <div class="city-tabriz city-item">
-        <span class="city-off">32%</span>
-        <img src="assets/img/Tabriz.png" alt="Tabriz">
+
+      <div class="city-items">
+        <div class="city-item">
+          <span class="city-off">32%</span>
+          <img src="assets/img/Tehran.png" alt="Tehran">
+        </div>
+        <div class="city-item">
+          <span class="city-off">32%</span>
+          <img src="assets/img/Shiraz.png" alt="Shiraz">
+        </div>
+        <div class="city-item">
+          <span class="city-off">32%</span>
+          <img src="assets/img/Esfahan.png" alt="Esfahan">
+        </div>
+        <div class="city-item">
+          <span class="city-off">32%</span>
+          <img src="assets/img/Tabriz.png" alt="Tabriz">
+        </div>
       </div>
     </section>
     <!-- City list end -->
 
-    <!-- Service-2 start -->
-    <section class="service-2">
+    <!-- seasonal-discount start -->
+    <section class="seasonal-discount">
       <div class="winter-off">تخفیفات زمستانه همکار هتل</div>
       <div class="dariush-reserve">
         <span class="dot"></span>
@@ -140,34 +145,39 @@
         <span class="arrow">&#10095;</span>
       </div>
     </section>
-    <!-- Service-2 end -->
+    <!-- seasonal-discount end -->
 
     <!-- Hotel list start -->
     <section class="hotel-list">
-      <div class="hotel-list-title">
-        <span class="icon-location-pin hotle-title-icon"></span>
-        <span class="hotle-title-text">لیست هتل ها</span>
-        <span class="hotle-title-off">به همراه میزان تخفیف</span>
+      <div class="hotel-list-menu">
+        <div class="hotel-list-title">
+          <span class="icon-location-pin hotle-title-icon"></span>
+          <span class="hotle-title-text">لیست هتل ها</span>
+          <span class="hotle-title-off">به همراه میزان تخفیف</span>
+        </div>
+        <div class="hotel-see-more">
+          <span>مشاهده بیشتر هتل ها</span>
+          <span>&#10095;</span>
+        </div>
       </div>
-      <div class="hotel-see-more">
-        <span>مشاهده بیشتر هتل ها</span>
-        <span>&#10095;</span>
-      </div>
-      <div class="Qaser-hotel hotel-item">
-        <span class="hotel-item-off">۲۳%</span>
-        <span class="hotel-item-name">هتل ارگ قصرشیرین</span>
-      </div>
-      <div class="chamran-hotel hotel-item">
-        <span class="hotel-item-off">۲۳%</span>
-        <span class="hotel-item-name">هتل چمران شیراز</span>
-      </div>
-      <div class="abasi-hotel hotel-item">
-        <span class="hotel-item-off">۲۳%</span>
-        <span class="hotel-item-name">هتل عباسی اصفهان</span>
-      </div>
-      <div class="dariush-hotel hotel-item">
-        <span class="hotel-item-off">۲۳%</span>
-        <span class="hotel-item-name">هتل داریوش کیش</span>
+
+      <div class="hotle-items">
+        <div class="Qaser-hotel hotel-item">
+          <span class="hotel-item-off">۲۳%</span>
+          <span class="hotel-item-name">هتل ارگ قصرشیرین</span>
+        </div>
+        <div class="chamran-hotel hotel-item">
+          <span class="hotel-item-off">۲۳%</span>
+          <span class="hotel-item-name">هتل چمران شیراز</span>
+        </div>
+        <div class="abasi-hotel hotel-item">
+          <span class="hotel-item-off">۲۳%</span>
+          <span class="hotel-item-name">هتل عباسی اصفهان</span>
+        </div>
+        <div class="dariush-hotel hotel-item">
+          <span class="hotel-item-off">۲۳%</span>
+          <span class="hotel-item-name">هتل داریوش کیش</span>
+        </div>
       </div>
     </section>
     <!-- Hotel list end -->
